--- a/git.config
+++ b/git.config
@@ -3,3 +3,7 @@
 	email = randyl@emphasysgrp.com
 [push]
 	default = simple
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
