--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh-antigen"]
 	path = zsh-antigen
 	url = https://github.com/rlexvold/zsh-antigen.git
+[submodule "zgen"]
+	path = zgen
+	url = https://github.com/tarjoilija/zgen.git
